src/main/resources/static/css/style.css
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START VARIABLE DECLARATION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
:root {

    /*
    *   RAPPEL
    *   ``````
    *   Pour déclarer une variable css:
    *   --endroit-élément-propriété: valeur;
    *
    *   Pour utilisation d'une variable :
    *   sélecteur {
    *       propriété: var(nomDeLaVariable);
    *   }
    */

    /****** the size ******/
    --generality-size-icon: 1rem;
    --mobile-logo_xs-width: 65px;
    --mobile-logo_xs-height: 65px;
    --mobile-logo_xl-width: 130px;
    --mobile-logo_xl-height: 130px;
    --mobile-avatar-width: 65px;
    --mobile-avatar-height: 65px;
    --generality-button-width: 30vw;
    --generality-button-height: 3vh;

    /****** the colors ******/
    --generality-color-font_primary: #002962;
    --generality-color-font_second: #FFFFFF;
    --generality-color-first: #007AC3;
    --generality-color-background: #FFFFFF;
    --generality-color-second: #FDBC2D;
    --generality-color-third: #F1502F;

    /****** the border ******/
    --generality-button-border: none;
    --generality-button-border_radius: 15px;
    --generality-button-box_shadow: 0px 1px 3px black;
    --mobile-logo-border_radius: 50%;
    --mobile-avatar-border_radius: 50%;


    /****** the text ******/
    --generality-text-font_size: 1.5rem;
    --generality-title_xl-font_size: 2.2rem;

    /****** the box ******/


    /****** Paddings ******/
    --generality-padding-button: 0.2rem 0.5rem;
    --mobile-padding-logo_avatar: 1rem;
    --mobile-padding-logo_title_xl: 1rem;

}
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ END VARIABLE DECLARATION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START MOBILE VERSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
/* ----------   START OF GENERALITY  ------------------ */
*{
    margin: 0;
    padding: 0;
    color: var(--generality-color-font_primary);
    font-size: var(--generality-text-font_size);
    font-family: 'Roboto', sans-serif;
}

.button {
    display: block;
    background-color: var(--generality-color-first);
    color: var(--generality-color-font_second);
    border: var(--generality-button-border);
    padding: var(--generality-padding-button);
    border-radius: var(--generality-button-border_radius);
    box-shadow: var(--generality-button-box_shadow);
    width: var(--generality-button-width);
    height: var(--generality-button-height);
    text-align: center;
    line-height: var(--generality-button-height);
    text-decoration: none;
    margin-top: 5vh;
    font-weight: bold;
}

.fas, .far {
    font-size: var(--generality-size-icon);
    color: var(--generality-color-first);
}

#user-delete {
    font-size: var(--generality-size-icon);
    color: var(--generality-color-third);
}

.color-title {
    color: var(--generality-color-first);
}

.color-icon-primary {
    color: var(--generality-color-second);
}
/* ----------   END OF GENERALITY  ------------------ */
/* ----------   START OF HOME PAGE  ------------------ */
.home-page-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 50vh;
    justify-content: center;
    margin-top: 10vh;
}
.home-page-main > div > p {
    text-align: center;
}
.forgot-password {
    margin-top: 1vh;
}
.forgot-password a {
    font-style: italic;
    font-size: calc(var(--generality-text-font_size) - 0.5rem);
}
/* ----------   END OF HOME PAGE  ------------------ */
/* ----------   START OF DASHBOARD  ------------------ */
/*START SECTION 1*/

/*END SECTION 1*/
/*START SECTION 2*/

/*END SECTION 2*/
/* ----------   END OF DASHBOARD  ------------------ */
/* ----------   START OF DASHBOARD-EMPTY  ------------------ */
/*START SECTION 1*/

/*END SECTION 1*/
/*START SECTION 2*/

/*END SECTION 2*/
/* ----------   END OF DASHBOARD-EMPTY  ------------------ */
/* ----------   START OF GIFT-LIST  ------------------ */
.giftlist-h2 {
    margin-top: 6rem;
    margin-bottom: 3rem;
    color: #002962;
    text-align: center;
}

.container1, .container2 {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    text-align: center;
}

.giftlist-img {
    text-align: center;
    border-radius: 2rem;
    height: 200px;
    width: 200px;
}
/*-----------------END SECTION OF GIFT-LIST-----------------*/
/* ----------   START OF GIFT CREATE  ------------------ */
.gift-list-logo-avatar-img-logo {
    background-image: url("/image/logo-genie-130*130.png");
    width: var(--mobile-logo_xl-width);
    height: var(--mobile-logo_xl-height);
    border-radius: var(--mobile-logo-border_radius);
    margin: 1rem auto;
}
.gift-list-h1 {
    margin-top: 1rem;
    margin-bottom: 3rem;
    text-align: center;
}
.gift-list-h2 {
    margin-top: 2rem;
    margin-bottom: 2rem;
    text-align: center;
}
.gift-create-image img {
    max-width: 26.5em;
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px black;
}
.gift-create-form form {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding-top: 4em;
}
.gift-create-form form div {
    padding-top: 2em;
}
.gift-create-form form div input {
    height: 3em;
}
.gift-create-block {
    display: flex;
    justify-content: space-around;
    width: 20em;
    padding-top: 0;
}
.gift-create-checkbox {
    display: flex;
    justify-content: space-evenly;
    width: 20em;
}
.gift-create-block-bouton {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 26.5em;
    padding-top: 0;
}
.gift-create-bouton {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 10em;
    align-items: center;
}
.gift-create-bouton input {
    width: 8em;
    height: 3em;
    background-color: var(--generality-color-first);
    color: var(--generality-color-font_second);
    border: var(--generality-button-border);
    padding: var(--generality-padding-button);
    border-radius: var(--generality-button-border_radius);
    box-shadow: var(--generality-button-box_shadow);
}
.gift-create-nameCadeau input{
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px gainsboro;
}
.gift-create-price input {
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px gainsboro;
}
.gift-create-urlDealer input {
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px gainsboro;
}
.gift-create-urlPicture input {
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px gainsboro;
}
.gift-create-message textarea {
    border-radius: 10px;
    border: none;
    box-shadow: 3px 5px 3px gainsboro;
}
.gift-create-message textarea:hover {
    background-color: aliceblue;
}
.gift-create-nameCadeau input:hover {
    background-color: aliceblue;
}
.gift-create-price input:hover {
    background-color: aliceblue;
}
.gift-create-urlDealer input:hover {
    background-color: aliceblue;
}
.gift-create-urlPicture input:hover {
    background-color: aliceblue;
}
/* ----------   END OF GIFT CREATE  ------------------ */
/* ----------   START OF FRAGMENT MOBILE LOGO AVATAR  ------------------ */
.fragment-mobile-logo-avatar-header {
    display: flex;
    justify-content: space-between;
    padding: 1rem;
}
.fragment-mobile-logo-header {
    padding: var(--mobile-padding-logo_avatar);
}
.fragment-mobile-logo-avatar-img-logo {
    background-image: url("/image/logo-genie-65*65.png");
    width: var(--mobile-logo_xs-width);
    height: var(--mobile-logo_xs-height);
    border-radius: var(--mobile-logo-border_radius);
}
.fragment-mobile-logo-avatar-img-avatar {
    background-image: url("/image/girl.svg");
    width: var(--mobile-avatar-width);
    height: var(--mobile-avatar-height);
    border-radius: var(--mobile-avatar-border_radius);
}
/* ----------   END OF FRAGMENT MOBILE LOGO AVATAR  ------------------ */
/* ----------   START OF FRAGMENT MOBILE LOGO ET TITRE XL  ------------------ */
.fragment-mobile-logo-title-xl {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding: var(--mobile-padding-logo_title_xl);
}
.fragment-mobile-logo-xl {
    background-image: url("/image/logo-genie-130*130.png");
    width: var(--mobile-logo_xl-width);
    height: var(--mobile-logo_xl-height);
}
.fragment-mobile-title-xl {
    font-size: var(--generality-title_xl-font_size);
}
/* ----------   END OF FRAGMENT MOBILE LOGO ET TITRE XL  ------------------ */
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ END MOBILE VERSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ START DESKTOP VERSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@media only screen and (min-width: 768px) {

    /* ----------   START OF GENERALITY  ------------------ */

    /* ----------   END OF GENERALITY  ------------------ */
    /* ----------   START OF INDEX  ------------------ */
    /*START SECTION 1*/

    /*END SECTION 1*/
    /*START SECTION 2*/

    /*END SECTION 2*/
    /* ----------   END OF INDEX  ------------------ */
    /* ----------   START OF DASHBOARD  ------------------ */
    /*START SECTION 1*/

    /*END SECTION 1*/
    /*START SECTION 2*/

    /*END SECTION 2*/
    /* ----------   END OF DASHBOARD  ------------------ */
    /* ----------   START OF DASHBOARD-EMPTY  ------------------ */
    /*START SECTION 1*/

    /*END SECTION 1*/
    /*START SECTION 2*/

    /*END SECTION 2*/
    /* ----------   END OF DASHBOARD-EMPTY  ------------------ */
    /* ----------   START OF PAGE  ------------------ */
    /*START SECTION 1*/

    /*END SECTION 1*/
    /*START SECTION 2*/

    /*END SECTION 2*/
    /* ----------   END OF PAGE  ------------------ */
    /* ----------   START OF PAGE  ------------------ */
    /*START SECTION 1*/

    /*END SECTION 1*/
    /*START SECTION 2*/

    /*END SECTION 2*/
    /* ----------   END OF PAGE  ------------------ */
}
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ END DESKTOP VERSION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

